platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_70.platter
start() { tableType of m = field: ; }